Sapper 24.11.1
* Internal optimizations