@@ -9,30 +9,6 @@ fi
 LAUNCH_DIR=$(cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd)
 INSTALL_DIR=$1/sapper
 
-declare -a EMPTY_JARS=(
-  "javafx-base-23.0.1.jar"
-  "javafx-controls-23.0.1.jar"
-  "javafx-graphics-23.0.1.jar"
-  "javafx-media-23.0.1.jar"
-)
-
-# Remove JavaFX empty jars to enable jlink
-for j in ${EMPTY_JARS[@]}
-  do
-    rm -f $LAUNCH_DIR/../target/jmods/$j
-  done
-
-# Make reduced runtime
-echo -n "Creating reduced java runtime... "
-
-$JAVA_HOME/bin/jlink --module-path $LAUNCH_DIR/../target/jmods \
-  --add-modules ALL-MODULE-PATH \
-  --no-header-files \
-  --no-man-pages \
-  --output $LAUNCH_DIR/../target/jlink
-
-echo "done"
-
 echo -n "Installing into $INSTALL_DIR... "
 mkdir -p $INSTALL_DIR
 rm -rf $INSTALL_DIR/*
@@ -59,6 +35,3 @@ Categories=Game;Java;
 " > $INSTALL_DIR/sapper.desktop
 
 echo "done"
-
-# Cleanup directory made by root
-rm -rf $LAUNCH_DIR/../target/jlink
